[package]
name = "poc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
http = "1.3.1"
httparse = "1.10.1"
ktls = { version = "7.0.0-rc.4", package = "miku-ktls" }
libc = "0.2.172"
macro-toolset = { version = "0.8.3", default-features = false }
pin-project = "1.1.10"
rcgen = "0.13.2"
rustls = "0.23.26"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-splice2 = "0.3.0-alpha.8"
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot"] }

[lints]
workspace = true
